added certain service page

--- a/contacts.html
+++ b/contacts.html
@@ -7,12 +7,14 @@
   <title>Контакты</title>
   <link rel="stylesheet" href="./styles/contacts.css">
   <link rel="stylesheet" href="./styles/contacts_media.css">
+  <link rel="stylesheet" href="./styles/magnific-popup.css">
 </head>
 <body>
   <section class="header_section">
     <div class="container">
       <header>
-        <div class="logo_box"><img src="./images/icons/logo_white.png" alt="logo" /></div>
+        <div class="logo_box">
+          <a href="./index.html"><img src="./images/icons/logo_white.png" alt="logo" /></a></div>
         <div class="header__burger">
           <span></span>
         </div>
@@ -27,7 +29,7 @@
         </nav>
         <div class="nav_links">
           <a class="number_link" href="tel:+7(921)8888888">+7 (921) 888 88 88</a>
-          <a class="text_link" href="#">Бесплатная консультация</a>
+          <a class="text_link" href="#consultation_form">Бесплатная консультация</a>
         </div>
       </div>
       </header>
@@ -35,6 +37,27 @@
         <h1>Контакты</h1>
       </div>
     </div>
+    <div class="wrap_order">
+      <div class="order_consultation" >
+        <form id = "consultation_form" class = "test">
+            <div class="wrapper" >
+              <h2>Закажите консультацию</h2>
+              <p>Менеджер перезвонит Вам в ближайшее время</p>
+            <input type="text" class = "name" placeholder="Ваше имя">
+            <input class = "num_input" type="text" placeholder="+7(___) ___ __ __">
+            <div class="input_block">
+              <input type="checkbox" id="access" name="access" />
+              <label for="access">Я даю согласие на обработку своих персональных данных</label>
+            </div>
+            <div class="submit_input_block">
+              <input class = "sub_input" type="submit" value="Перезвоните мне">
+            </div>
+          </div>
+          <img class = "top_branch"src="./images/background/top_branch.png" alt="branch">
+          <img class = "bottom_branch"src="./images/background/bottom_branch.png" alt="branch">
+          </form>
+        </div>
+      </div>
   </section>
   <section class="contact_us_section">
     <div class="container">
@@ -95,6 +118,7 @@
   <a href="#" class = "back-to-top"></a>
   <script src="./script/jquery-1.11.0.min.js"></script>
   <script src="./script/jquery-migrate-1.2.1.min.js"></script>
+  <script src="./script/jquery.magnific-popup.min.js"></script>
   <script src="./slick/slick.min.js"></script>
   <script src="./script/main.js"></script>
 </body>
