--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
       <img class="left_branch" src="./images/background/Layer1002.png" alt="left branch" />
 
       <div class="wrap_order">
-
       <div class="order_consultation" >
         <form id = "consultation_form" class = "test">
             <div class="wrapper" >
@@ -53,7 +52,7 @@
             <input class = "num_input" type="text" placeholder="+7(___) ___ __ __">
             <div class="input_block">
               <input type="checkbox" id="access" name="access" />
-              <label for="access">Я даю согласие на обработку своих персональных данных</label> 
+              <label for="access">Я даю согласие на обработку своих персональных данных</label>
             </div>
             <div class="submit_input_block">
               <input class = "sub_input" type="submit" value="Перезвоните мне">
@@ -442,7 +441,7 @@
           <p>Пригласите ландшафтного <br> дизайнера на участок!</p>
         </div>
         <div class="green_btn">
-          <a href="#">Перезвоните мне</a>
+          <a href="./contacts.html">Перезвоните мне</a>
         </div>
       </div>
       </div>
