--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./styles/portfolio.css" />
   <link rel="stylesheet" href="./styles/portfolio_media.css" />
   <link rel="stylesheet" href="./slick/slick.css" />
+  <link rel="stylesheet" href="./styles/magnific-popup.css">
 </head>
 <body>
   <section class="header_section">
@@ -28,7 +29,7 @@
         </nav>
         <div class="nav_links">
           <a class="number_link" href="tel:+7(921)8888888">+7 (921) 888 88 88</a>
-          <a class="text_link" href="#">Бесплатная консультация</a>
+          <a class="text_link" href="#consultation_form">Бесплатная консультация</a>
         </div>
       </div>
       </header>
@@ -37,6 +38,27 @@
         <h2>Наши избранные проекты</h2>
       </div>
     </div>
+    <div class="wrap_order">
+      <div class="order_consultation" >
+        <form id = "consultation_form" class = "test">
+            <div class="wrapper" >
+              <h2>Закажите консультацию</h2>
+              <p>Менеджер перезвонит Вам в ближайшее время</p>
+            <input type="text" class = "name" placeholder="Ваше имя">
+            <input class = "num_input" type="text" placeholder="+7(___) ___ __ __">
+            <div class="input_block">
+              <input type="checkbox" id="access" name="access" />
+              <label for="access">Я даю согласие на обработку своих персональных данных</label>
+            </div>
+            <div class="submit_input_block">
+              <input class = "sub_input" type="submit" value="Перезвоните мне">
+            </div>
+          </div>
+          <img class = "top_branch"src="./images/background/top_branch.png" alt="branch">
+          <img class = "bottom_branch"src="./images/background/bottom_branch.png" alt="branch">
+          </form>
+        </div>
+      </div>
   </section>
   <section class="example_work_section">
     <div class="container">
@@ -70,6 +92,27 @@
       <a href="#">Посмотреть весь проект</a>
     </div>
   </div>
+  <div class="wrap_order">
+      <div class="order_consultation" >
+        <form id = "consultation_form" class = "test">
+            <div class="wrapper" >
+              <h2>Закажите консультацию</h2>
+              <p>Менеджер перезвонит Вам в ближайшее время</p>
+            <input type="text" class = "name" placeholder="Ваше имя">
+            <input class = "num_input" type="text" placeholder="+7(___) ___ __ __">
+            <div class="input_block">
+              <input type="checkbox" id="access" name="access" />
+              <label for="access">Я даю согласие на обработку своих персональных данных</label>
+            </div>
+            <div class="submit_input_block">
+              <input class = "sub_input" type="submit" value="Перезвоните мне">
+            </div>
+          </div>
+          <img class = "top_branch"src="./images/background/top_branch.png" alt="branch">
+          <img class = "bottom_branch"src="./images/background/bottom_branch.png" alt="branch">
+          </form>
+        </div>
+      </div>
   </section>
 
   <section class="example_work_section">
@@ -180,6 +223,7 @@
   <script src="./script/jquery-1.11.0.min.js"></script>
   <script src="./script/jquery-migrate-1.2.1.min.js"></script>
   <script src="./slick/slick.min.js"></script>
+  <script src="./script/jquery.magnific-popup.min.js"></script>
   <script src="./script/main.js"></script>
 </body>
 </html>
