--- a/services.html
+++ b/services.html
@@ -7,6 +7,7 @@
   <title>Services</title>
   <link rel="stylesheet" href="./styles/services.css">
   <link rel="stylesheet" href="./styles/services_media.css">
+  <link rel="stylesheet" href="./styles/magnific-popup.css">
 </head>
 <body>
   <section class="header_section">
@@ -27,17 +28,38 @@
         </nav>
         <div class="nav_links">
           <a class="number_link" href="tel:+7(921)8888888">+7 (921) 888 88 88</a>
-          <a class="text_link" href="#">Бесплатная консультация</a>
+          <a class="text_link" href="#consultation_form">Бесплатная консультация</a>
         </div>
       </div>
       </header>
       <div class="title_part">
         <h1>Услуги</h1>
         <div class="order_link">
-        <a href="#">Заказать услугу</a>
+        <a href="#order">Заказать услугу</a>
       </div>
       </div>
     </div>
+    <div class="wrap_order">
+      <div class="order_consultation" >
+        <form id = "consultation_form" class = "test">
+            <div class="wrapper" >
+              <h2>Закажите консультацию</h2>
+              <p>Менеджер перезвонит Вам в ближайшее время</p>
+            <input type="text" class = "name" placeholder="Ваше имя">
+            <input class = "num_input" type="text" placeholder="+7(___) ___ __ __">
+            <div class="input_block">
+              <input type="checkbox" id="access" name="access" />
+              <label for="access">Я даю согласие на обработку своих персональных данных</label>
+            </div>
+            <div class="submit_input_block">
+              <input class = "sub_input" type="submit" value="Перезвоните мне">
+            </div>
+          </div>
+          <img class = "top_branch"src="./images/background/top_branch.png" alt="branch">
+          <img class = "bottom_branch"src="./images/background/bottom_branch.png" alt="branch">
+          </form>
+        </div>
+      </div>
   </section>
   <section class="service_examples">
     <div class="container">
@@ -47,7 +69,7 @@
             <h2>Lorem ipsum</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborumeom</p>
             <div class="more_details_link">
-              <a href="">Подробнее</a>
+              <a href="./certain_service.html">Подробнее</a>
             </div>
           </div>
             <div class="img_part">
@@ -62,7 +84,7 @@
             <h2>Lorem ipsum</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborumeom</p>
             <div class="more_details_link">
-              <a href="">Подробнее</a>
+              <a href="./certain_service.html">Подробнее</a>
             </div>
           </div>
         </div>
@@ -71,7 +93,7 @@
             <h2>Lorem ipsum</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborumeom</p>
             <div class="more_details_link">
-              <a href="">Подробнее</a>
+              <a href="./certain_service.html">Подробнее</a>
             </div>
           </div>
           <div class="img_part">
@@ -86,7 +108,7 @@
             <h2>Lorem ipsum</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborumeom</p>
             <div class="more_details_link">
-              <a href="">Подробнее</a>
+              <a href="./certain_service.html">Подробнее</a>
             </div>
           </div>
         </div>
@@ -94,6 +116,7 @@
     </div>
   </section>
   <section class="contact_us_section">
+    <a name = "order"></a>
     <div class="container">
     <div class="text_content">
       <h3>Свяжитесь с нами, чтобы
@@ -142,6 +165,7 @@
   <a href="#" class = "back-to-top"></a>
   <script src="./script/jquery-1.11.0.min.js"></script>
   <script src="./script/jquery-migrate-1.2.1.min.js"></script>
+  <script src="./script/jquery.magnific-popup.min.js"></script>
   <script src="./slick/slick.min.js"></script>
   <script src="./script/main.js"></script>
 </body>
