--- a/index.html
+++ b/index.html
@@ -473,5 +473,6 @@
     <script src="./script/jquery.magnific-popup.min.js"></script>
     <script src="./slick/slick.min.js"></script>
     <script src="./script/main.js"></script>
+    <script src="./script/slider.js"></script>
   </body>
 </html>
