--- a/portfolio.html
+++ b/portfolio.html
@@ -89,7 +89,7 @@
       </div>
     </div>
     <div class="green_btn">
-      <a href="#">Посмотреть весь проект</a>
+      <a href="./certain_project.html">Посмотреть весь проект</a>
     </div>
   </div>
   <div class="wrap_order">
@@ -144,7 +144,7 @@
       </div>
     </div>
     <div class="green_btn">
-      <a href="#">Посмотреть весь проект</a>
+      <a href="./certain_project.html">Посмотреть весь проект</a>
     </div>
   </div>
   </section>
@@ -177,7 +177,7 @@
       </div>
     </div>
     <div class="green_btn">
-      <a href="#">Посмотреть весь проект</a>
+      <a href="./certain_project.html">Посмотреть весь проект</a>
     </div>
   </div>
   </section>
@@ -225,5 +225,6 @@
   <script src="./slick/slick.min.js"></script>
   <script src="./script/jquery.magnific-popup.min.js"></script>
   <script src="./script/main.js"></script>
+  <script src="./script/slider.js"></script>
 </body>
 </html>
